# aocl-scalapack

./: BUILD.md  CMakeLists.txt  LICENSE  NOTICES  README_ScaLAPACK_AMD  scalapack.pc.in  scalapack_build.cmake  scalapack_test.sh  so_version
.glog/: glog-scan.sarif
AOCL_DTL/: CMakeLists.txt  README.md  aocldtl.c  aocldtl.h  aocldtlcf.h  aoclfal.h  aoclflist.c  aocltpdef.h
AOCL_DTL/SRC/: CMakeLists.txt
BLACS/: CMakeLists.txt
BLACS/INSTALL/: CMakeLists.txt
BLACS/SRC/: AOCLI_IdringSR.c  AOCLI_SringSR.c  Bconfig.h  Bdef.h  CMakeLists.txt  blacs_abort_.c  blacs_barr_.c  blacs_exit_.c  blacs_free_.c  blacs_get_.c  blacs_grid_.c  blacs_info_.c  blacs_init_.c  blacs_map_.c  blacs_pcoord_.c  blacs_pinfo_.c  blacs_pnum_.c  blacs_set_.c  blacs_setup_.c  cgamn2d_.c  cgamx2d_.c  cgebr2d_.c  cgebs2d_.c  cgerv2d_.c  cgesd2d_.c  cgsum2d_.c  ctrbr2d_.c  ctrbs2d_.c  ctrrv2d_.c  ctrsd2d_.c  dcputime00_.c  dgamn2d_.c  dgamx2d_.c  dgebr2d_.c  dgebs2d_.c  dgerv2d_.c  dgesd2d_.c  dgsum2d_.c  dtrbr2d_.c  dtrbs2d_.c  (+37 more)
BLACS/TESTING/: CMakeLists.txt  Cbt.c
CMAKE/: FortranMangling.cmake
EXAMPLE/aocl_progress_example/: README.txt  Readme.txt  pdgerf_example_app.c
FRAMEWORK/: CMakeLists.txt  SL_Context.c  SL_Context.h  SL_Context_fortran_include.h  SL_Context_module.f  cpu_features.c  cpu_features.h
PBLAS/: CMakeLists.txt
PBLAS/SRC/: CMakeLists.txt  PBblacs.h  PBpblas.h  pblas.h  pdgemmla_.c  pdpanel_bcast_.c  pdpanel_bcsiz_.c  pdpanel_bfree_.c  pdpanel_bpack_.c  pdpanel_bwait_.c  pdpanel_lcast_.c  pdpanel_lcopy_.c  pdpanel_pfree_.c  pdpanel_pinit_.c  pdpanel_ucast_.c  pdtrsmla_.c
PBLAS/SRC/PBBLAS/: CMakeLists.txt
PBLAS/SRC/PTOOLS/: CMakeLists.txt  PB_Cdtypeset.c
PBLAS/SRC/PTZBLAS/: CMakeLists.txt  cvvdotc.f  zvvdotc.f
PBLAS/TESTING/: CMakeLists.txt  pcblastst.f  pdblastst.f  psblastst.f  pzblastst.f
PBLAS/TIMING/: CMakeLists.txt
REDIST/: CMakeLists.txt
REDIST/SRC/: CMakeLists.txt  pgemraux.c  pigemr.c  pigemr2.c  psgemr.c  redist.h
REDIST/TESTING/: CMakeLists.txt  redist.h
SCRIPTS/: generate_code_coverage_html.sh
SRC/: CMakeLists.txt  aocl_dtl_trace_entry.c  aocl_dtl_trace_exit.c  aocl_scalapack_progress.c  aocl_scalapack_progress.h  clanv2.f  get_aocl_scalapack_version.c  icopypv.f  pblas.h  pcdbsv.f  pcdbtrf.f  pcdbtrs.f  pcdbtrsv.f  pcdtsv.f  pcdttrf.f  pcdttrs.f  pcdttrsv.f  pcgbsv.f  pcgbtrf.f  pcgbtrs.f  pcgebd2.f  pcgebrd.f  pcgecon.f  pcgeequ.f  pcgehd2.f  pcgehrd.f  pcgelq2.f  pcgelqf.f  pcgels.f  pcgeql2.f  pcgeqlf.f  pcgeqpf.f  pcgeqr2.f  pcgeqrf.f  pcgerfs.f  pcgerq2.f  pcgerqf.f  pcgesv.f  pcgesvd.f  pcgesvx.f  (+572 more)
TESTING/: CMakeLists.txt  README.txt
TESTING/AOCL_PROGRESS_TESTS/: CMakeLists.txt  README.txt  Scalapack_progress_test_run_example_commands.sh  test_aocl_progress_pcgeqrf.c  test_aocl_progress_pcgetrf.c  test_aocl_progress_pcpotrf.c  test_aocl_progress_pdgeqrf.c  test_aocl_progress_pdgetrf.c  test_aocl_progress_pdpotrf.c  test_aocl_progress_psgeqrf.c  test_aocl_progress_psgetrf.c  test_aocl_progress_pspotrf.c  test_aocl_progress_pzgeqrf.c  test_aocl_progress_pzgetrf.c  test_aocl_progress_pzpotrf.c
TESTING/EIG/: CMakeLists.txt  Makefile  SL_Context_module_eig.f  pcbrddriver.f  pcevcdriver.f  pcgesvdriver.f  pcgsepdriver.f  pcgsepreq.f  pcgsepsubtst.f  pcgseptst.f  pchrddriver.f  pcmatgen.f  pcnepdriver.f  pcsepdriver.f  pcseprdriver.f  pcsepreq.f  pcseprreq.f  pcseprsubtst.f  pcseprtst.f  pcseptst.f  pctrddriver.f  pcttrdtester.f  pdbrddriver.f  pdgesvdriver.f  pdgsepdriver.f  pdgsepreq.f  pdgsepsubtst.f  pdgseptst.f  pdhrddriver.f  pdmatgen.f  pdnepdriver.f  pdsdpsubtst.f  pdsepdriver.f  pdsepinfo.f  pdseprdriver.f  pdsepreq.f  pdseprreq.f  pdseprsubtst.f  pdseprtst.f  pdsepsubtst.f  (+50 more)
TESTING/LIN/: CMakeLists.txt  Makefile  pcdbdriver.f  pcdbinfo.f  pcdtdriver.f  pcdtinfo.f  pcgbdriver.f  pcgbinfo.f  pcgesvdriver.f  pcinvdriver.f  pclltdriver.f  pclsdriver.f  pcludriver.f  pcmatgen.f  pcpbdriver.f  pcpbinfo.f  pcptdriver.f  pcptinfo.f  pcqrdriver.f  pcqrinfo.f  pddbdriver.f  pddbinfo.f  pddtdriver.f  pddtinfo.f  pdgbdriver.f  pdgbinfo.f  pdgesvdriver.f  pdinvdriver.f  pdlltdriver.f  pdlsdriver.f  pdludriver.f  pdmatgen.f  pdpbdriver.f  pdpbinfo.f  pdptdriver.f  pdptinfo.f  pdqrdriver.f  pdqrinfo.f  psdbdriver.f  psdbinfo.f  (+34 more)
TOOLS/: CMakeLists.txt  SL_gridreshape.c  ccdotc.f  pclaprnt.f  pclaread.f  pclawrite.f  pdlaprnt.f  pdlaread.f  pdlawrite.f  pilaprnt.f  pslaprnt.f  pslaread.f  pslawrite.f  pzlaprnt.f  pzlaread.f  pzlawrite.f  zzdotc.f
TOOLS/LAPACK/: CMakeLists.txt  claghe.f  clagsy.f  zlaghe.f  zlagsy.f
